[gd_scene load_steps=15 format=3 uid="uid://d0kou7ljd58sr"]

[ext_resource type="Texture2D" uid="uid://pp07r37ylfh8" path="res://assets/sprites/slime_green.png" id="1_a5pfs"]
[ext_resource type="Script" path="res://scripts/enemy_slime.gd" id="1_fbl2w"]
[ext_resource type="AudioStream" uid="uid://bo5l3kn6tlegs" path="res://assets/sounds/explosion.wav" id="3_vcmbd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mylyo"]
atlas = ExtResource("1_a5pfs")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m03wu"]
atlas = ExtResource("1_a5pfs")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nvku"]
atlas = ExtResource("1_a5pfs")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_amj50"]
atlas = ExtResource("1_a5pfs")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4k1a"]
atlas = ExtResource("1_a5pfs")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyrcy"]
atlas = ExtResource("1_a5pfs")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_shrdt"]
atlas = ExtResource("1_a5pfs")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssf0g"]
atlas = ExtResource("1_a5pfs")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ar70e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mylyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m03wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nvku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amj50")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4k1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyrcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shrdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssf0g")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qqbj3"]
size = Vector2(8, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0kupe"]
size = Vector2(12, 4)

[node name="EnemySlime" type="Node2D"]
script = ExtResource("1_fbl2w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_ar70e")
animation = &"idle"
autoplay = "idle"

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(8, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(-9, 0)

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vcmbd")
bus = &"SFX"

[node name="DamageZone" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_qqbj3")

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_0kupe")
debug_color = Color(0.823651, 0, 0.183699, 0.42)

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="body_entered" from="DamageZone" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
